# LearningMPC

./: .gitignore  Lmpc_params.yaml  requirements.txt
data/: levinelobby_ss_mu0.1.csv  plot_centerline_overlay.py
data/maps/Sepang/: Sepang_initial_safe_set.csv  Sepang_waypoints.csv
data/maps/Shanghai/: Shanghai_initial_safe_set.csv  Shanghai_waypoints.csv
data/maps/YasMarina/: YasMarina_initial_safe_set.csv  YasMarina_waypoints.csv
data/maps/barc_oval/: barc_oval_waypoints.csv
data/maps/barc_oval_orginal/: barc_oval_orginal_initial_safe_set.csv  barc_oval_orginal_map.yaml  barc_oval_orginal_ss_mu0.1.csv  barc_oval_orginal_waypoints.csv
data/maps/gold_conference_room/: gold_conference_room.csv  gold_conference_room.pgm  gold_conference_room.yaml  gold_conference_room_initial_safe_set.csv  gold_conference_room_map.yaml  gold_conference_room_waypoints.csv  traj_race_cl_gold_conference_room.csv
f1tenth_gym/: UPSTREAM.txt  setup.py
f1tenth_gym/examples/: waypoint_follow.py
f1tenth_gym/gym/f110_gym/envs/: base_classes.py
include/LearningMPC/: track.h
lmpc_ros2/: CMakeLists.txt  README.md  package.xml
lmpc_ros2/config/: lmpc_params.yaml
lmpc_ros2/data/barc_oval/: barc_oval_initial_safe_set.csv
lmpc_ros2/data/gold_conference_room/: gold_conference_room_centerline.csv  gold_conference_room_initial_safe_set.csv  gold_conference_room_map.yaml
lmpc_ros2/docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  entrypoint.sh
lmpc_ros2/include/lmpc_ros2/: lmpc_node.hpp  pure_pursuit_node.hpp
lmpc_ros2/launch/: lmpc.launch.py  pure_pursuit.launch.py
lmpc_ros2/src/: lmpc_node.cpp  main.cpp  pure_pursuit_main.cpp  pure_pursuit_node.cpp
online_training/: README.md  offline_eval.py  plot_crashlap_error.py  plot_crc_curves.py  plot_laptime_curves.py  plot_model_error_by_crc.py  validate_beta_course_angle.py  validate_halfwidths.py  verify_cpp_port.py
online_training/cpp/: CMakeLists.txt  build.sh  error_regression.hpp  residual_bindings.cpp
online_training/data/barc_known/: laps_20260717_105519.csv  steps_20260717_105519.csv
online_training/data/barc_known_40/: laps_20260717_105554.csv  steps_20260717_105554.csv
online_training/data/barc_known_40_rd05/: laps_20260717_105708.csv  steps_20260717_105708.csv
online_training/data/barc_oval_beta_val/: laps_20260716_143838.csv  steps_20260716_143838.csv
online_training/data/barc_residual/: laps_20260717_105519.csv  steps_20260717_105519.csv
online_training/data/barc_residual_40/: laps_20260717_105554.csv  steps_20260717_105554.csv
online_training/data/barc_residual_40_rd05/: laps_20260717_105708.csv  steps_20260717_105708.csv
online_training/data/sepang_beta_val/: laps_20260716_144534.csv
online_training/data/warmstart/: Sepang_dyn_mu0.1.csv  Sepang_dyn_mu0.2.csv  Sepang_dyn_mu0.3.csv  Sepang_dyn_mu0.4.csv  Sepang_dyn_mu0.5.csv  Sepang_dyn_mu0.6.csv  Sepang_dyn_mu0.7.csv  Sepang_dyn_mu0.8.csv  Sepang_dyn_mu0.9.csv  Sepang_dyn_mu1.0.csv  YasMarina_dyn_mu0.1.csv  YasMarina_dyn_mu0.2.csv  YasMarina_dyn_mu0.3.csv  YasMarina_dyn_mu0.4.csv  YasMarina_dyn_mu0.5.csv  YasMarina_dyn_mu0.6.csv  YasMarina_dyn_mu0.7.csv  YasMarina_dyn_mu0.8.csv  YasMarina_dyn_mu0.9.csv  YasMarina_dyn_mu1.0.csv  barc_orginal_dyn_mu0.1.csv  barc_orginal_dyn_mu0.2.csv  barc_orginal_dyn_mu0.3.csv  barc_orginal_dyn_mu0.8.csv  barc_oval_dyn_mu0.1.csv  barc_oval_dyn_mu0.2.csv  barc_oval_dyn_mu0.3.csv  barc_oval_dyn_mu0.4.csv  barc_oval_dyn_mu0.5.csv  barc_oval_dyn_mu0.6.csv  barc_oval_dyn_mu0.7.csv  barc_oval_dyn_mu0.8.csv  barc_oval_dyn_mu0.9.csv  barc_oval_dyn_mu1.0.csv  barc_oval_orginal_dyn_mu0.4.csv  barc_oval_orginal_dyn_mu0.5.csv  barc_oval_orginal_dyn_mu0.6.csv  barc_oval_orginal_dyn_mu0.7.csv  barc_oval_orginal_dyn_mu0.9.csv  barc_oval_orginal_dyn_mu1.0.csv  (+11 more)
online_training/nominal_dynamics/: kinematic_bicycle.py  known_single_track.py
online_training/residual_learnt_dynamics/: error_regression.py
online_training/results/beta_validation/: beta_validation_barc_oval_beta_val.csv  beta_validation_sepang_beta_val.csv
online_training/results/campaign/: campaign_comparison.csv
online_training/results/offline_eval/: offline_eval_barc_oval_beta_val.csv  offline_eval_sepang_beta_val.csv
src_gym/: CMakeLists.txt  README.md  analyze_crash.py  build.sh  lmpc_gym.py  plot_lap_trajectories.py  record_initial_ss.py  run_crc_experiment.sh  run_final_residual_campaign.sh  run_friction_campaign.sh  run_residual_campaign.sh
src_gym/cpp/: lmpc_core.cpp
src_gym/cpp/ros_shim/boost/algorithm/: string.hpp
src_gym/cpp/ros_shim/geometry_msgs/: Point.h
src_gym/cpp/ros_shim/nav_msgs/: OccupancyGrid.h
